--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "prettier": "^2.3.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.3.5"
   }
