--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,14 +15,13 @@
       "module": "esnext",
       "moduleResolution": "node",
       "resolveJsonModule": true,
-      "isolatedModules": true,
+      "isolatedModules": false,
       "noEmit": true,
       "jsx": "react",
       "baseUrl": "src",
       "downlevelIteration": true
    },
    "include": [
-      "src",
-      "gatsby-node"
+      "src"
    ]
 }
