--- a/package.json
+++ b/package.json
@@ -45,12 +45,14 @@
     "@typescript-eslint/parser": "^4.28.5",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "gatsby-plugin-root-import": "^2.0.7",
     "prettier": "^2.3.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.3.5"
