--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "gatsby-transformer-sharp": "^3.10.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-player": "^2.9.0"
   },
   "devDependencies": {
     "@types/prettier": "^2.3.2",
