--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "prepare": "husky install",
+    "lint": "eslint './src/**/*.{js,jsx,ts,tsx}'",
+    "fix": "npm run fix:eslint && npm run fix:prettier",
+    "fix:eslint": "eslint --fix './src/**/*.{js,jsx,ts,tsx}'",
+    "fix:prettier": "prettier --write ./src/**/*.{js,jsx,ts,tsx}"
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.2.0",
@@ -57,6 +62,7 @@
     "gatsby-plugin-root-import": "^2.0.7",
     "prettier": "^2.3.2",
     "ts-node": "^9.1.1",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "husky": "^7.0.0"
   }
 }
