--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-player": "^2.9.0"
+    "react-player": "^2.9.0",
+    "react-share": "^4.4.0"
   },
   "devDependencies": {
     "@types/prettier": "^2.3.2",
