--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@contentful/rich-text-types": "^15.1.0",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@fontsource/noto-sans-jp": "^4.5.2",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
